--- a/app/src/main/res/layout/subscription_payment_fragment.xml
+++ b/app/src/main/res/layout/subscription_payment_fragment.xml
@@ -18,12 +18,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container_progress_payment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#AAFFFFFF"/>
+
         <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/large_margin"
-            android:visibility="gone"
+            android:id="@+id/progressBar_payment"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:layout_constraintBottom_toBottomOf="@+id/WebView_payment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
