--- a/app/src/main/res/values-de/enter_code.xml
+++ b/app/src/main/res/values-de/enter_code.xml
@@ -9,4 +9,8 @@
         <item quantity="one">Neuer Versuch in: %d Sekunde</item>
         <item quantity="other">Neuer Versuch in: %d Sekunden</item>
     </plurals>
+    <plurals name="text_new_attempt_in_x_minutes">
+        <item quantity="one">Neuer Versuch in: %d Minute</item>
+        <item quantity="other">Neuer Versuch in: %d Minuten</item>
+    </plurals>
 </resources>
