--- a/app/src/main/res/values-es/register_recovery_account_question.xml
+++ b/app/src/main/res/values-es/register_recovery_account_question.xml
@@ -9,4 +9,5 @@
     <string name="text_title_cancel">¿Salir del registro?</string>
     <string name="text_successful_message">Información registrada con éxito</string>
     <string name="text_error_message">Error al registrar la información</string>
+    <string name="text_final_register">¿Estás seguro que desea salir? La aplicación guardara las respuestas anteriores en tu configuración de recuperación de cuenta.</string>
 </resources>
