--- a/app/src/main/res/values-fr/send_code.xml
+++ b/app/src/main/res/values-fr/send_code.xml
@@ -3,4 +3,5 @@
     <string name="text_welcome_napoleon">Bienvenue sur Napoleon Secret Chat</string>
     <string name="text_description_welcome_napoleon">Votre vie privée est notre priorité, si vous souhaitez continuer, vous recevrez un code pour activer votre inscription.</string>
     <string name="text_send_register_code">Envoyer le code d\'enregistrement</string>
+    <string name="text_check_push">Remarque: Vérifiez les notifications push</string>
 </resources>
