--- a/app/src/main/res/values-it/send_code.xml
+++ b/app/src/main/res/values-it/send_code.xml
@@ -3,4 +3,5 @@
     <string name="text_welcome_napoleon">Benvenuti in Napoleon Secret Chat</string>
     <string name="text_description_welcome_napoleon">La tua privacy è la nostra priorità, se desideri continuare riceverai un codice per attivare la tua registrazione.</string>
     <string name="text_send_register_code">Invia il codice di registrazione</string>
+    <string name="text_check_push">Nota: controllare le notifiche push</string>
 </resources>
