--- a/app/src/main/res/values-pt/enter_code.xml
+++ b/app/src/main/res/values-pt/enter_code.xml
@@ -9,4 +9,8 @@
         <item quantity="one">Nova tentativa em: %d segundo</item>
         <item quantity="other">Nova tentativa em: %d segundos</item>
     </plurals>
+    <plurals name="text_new_attempt_in_x_minutes">
+        <item quantity="one">Nova tentativa em: %d minuto</item>
+        <item quantity="other">Nova tentativa em: %d minutos</item>
+    </plurals>
 </resources>
