--- a/app/src/main/res/values/enter_code.xml
+++ b/app/src/main/res/values/enter_code.xml
@@ -9,4 +9,8 @@
         <item quantity="one">New attempt in: %d second</item>
         <item quantity="other">New attempt in: %d seconds</item>
     </plurals>
+    <plurals name="text_new_attempt_in_x_minutes">
+        <item quantity="one">New attempt in: %d minute</item>
+        <item quantity="other">New attempt in: %d minutes</item>
+    </plurals>
 </resources>
