--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.profile.ProfileFragment">
 
     <data>
 
@@ -23,8 +24,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="?attr/attrBackgroundColorBackground"
-                tools:context=".ui.profile.ProfileFragment">
+                android:background="?attr/attrBackgroundColorBackground">
 
                 <!-- HEADER -->
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -66,6 +66,7 @@
                         android:background="@drawable/bg_profile_avatar"
                         android:scaleType="centerInside"
                         app:avatarUser="@{viewModel.user}"
+                        android:transitionName="transition_profile"
                         app:layout_constraintBottom_toTopOf="@+id/textView_user_name"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -109,12 +110,12 @@
                         android:layout_marginStart="@dimen/normal_margin"
                         android:layout_marginEnd="@dimen/normal_margin"
                         android:singleLine="true"
-                        app:nameUser="@{viewModel.user}"
                         android:textAlignment="center"
                         app:layout_constraintBottom_toTopOf="@+id/textView_user_nickname"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/imageView_profile_image"
+                        app:nameUser="@{viewModel.user}"
                         tools:text="Giussep Ricardo" />
 
                     <!-- USER NICKNAME -->
@@ -174,8 +175,8 @@
                         android:id="@+id/imageView_name_option_start_icon"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:scaleType="fitCenter"
                         android:background="?attr/selectableItemBackgroundBorderless"
+                        android:scaleType="fitCenter"
                         android:tint="?attr/attrTintColorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -194,7 +195,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_edit_secondary_black"/>
+                        app:srcCompat="@drawable/ic_edit_secondary_black" />
 
                     <!-- LABEL NAME -->
                     <TextView
@@ -226,11 +227,11 @@
                         android:maxLength="@dimen/max_length_display_name"
                         android:padding="0dp"
                         android:singleLine="true"
-                        app:nameUser="@{viewModel.user}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@id/textView_label_name"
                         app:layout_constraintStart_toStartOf="@id/textView_label_name"
                         app:layout_constraintTop_toBottomOf="@id/textView_label_name"
+                        app:nameUser="@{viewModel.user}"
                         tools:text="Giussep Ricardo Cachaya" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -252,8 +253,8 @@
                         android:id="@+id/imageView_status_option_start_icon"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:scaleType="fitCenter"
                         android:background="?attr/selectableItemBackgroundBorderless"
+                        android:scaleType="fitCenter"
                         android:tint="?attr/attrTintColorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -328,8 +329,8 @@
                         android:id="@+id/imageView_blocked_contacts_option_start_icon"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:scaleType="fitCenter"
                         android:background="?attr/selectableItemBackgroundBorderless"
+                        android:scaleType="fitCenter"
                         android:tint="?attr/attrTintColorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
