--- a/app/src/main/res/layout/preview_image_fragment.xml
+++ b/app/src/main/res/layout/preview_image_fragment.xml
@@ -18,7 +18,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:scaleType="fitCenter"
-            android:transitionName="transition_profile"
+            android:transitionName="transition_image_preview"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
