--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -66,7 +66,7 @@
                         android:background="@drawable/bg_profile_avatar"
                         android:scaleType="centerInside"
                         app:avatarUser="@{viewModel.user}"
-                        android:transitionName="transition_profile"
+                        android:transitionName="transition_image_preview"
                         app:layout_constraintBottom_toTopOf="@+id/textView_user_name"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
