NS-689, NS-774, NS-775, NS-771

--- a/app/src/main/res/layout/contact_profile_fragment.xml
+++ b/app/src/main/res/layout/contact_profile_fragment.xml
@@ -305,7 +305,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_restore_contact" />
+                        app:srcCompat="@drawable/ic_restore" />
 
                     <TextView
                         android:id="@+id/textView_label_restore_contact_chat"
