--- a/app/src/main/res/values-de/image_selector.xml
+++ b/app/src/main/res/values-de/image_selector.xml
@@ -4,4 +4,5 @@
     <string name="text_change_cover_photo">Titelbild ändern</string>
     <string name="text_take_photo">Mach ein Bild</string>
     <string name="text_select_photo">Foto auswählen</string>
+    <string name="text_select_default">Standard</string>
 </resources>
