--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -27,4 +27,7 @@
     <cache-path
         name="Gifs"
         path="Gifs/" />
+    <cache-path
+        name="fakeContact"
+        path="fakeContact/" />
 </paths>
