--- a/app/src/main/res/layout/image_selector_bottom_sheet_fragment.xml
+++ b/app/src/main/res/layout/image_selector_bottom_sheet_fragment.xml
@@ -42,7 +42,7 @@
         <!-- CAMERA OPTION -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container_camera_option"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="56dp"
             android:clickable="true"
             android:focusable="true"
@@ -79,7 +79,7 @@
         <!-- GALLERY OPTION -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container_gallery_option"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="56dp"
             android:clickable="true"
             android:focusable="true"
@@ -109,6 +109,43 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/imageView_gallery"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!-- GALLERY OPTION -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container_default"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?attr/selectableItemBackground"
+            android:paddingStart="@dimen/normal_padding"
+            android:paddingEnd="@dimen/normal_padding"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/container_gallery_option">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imageView_default"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_restore"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/colorSecondaryDark" />
+
+            <TextView
+                style="@style/BodyTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/large_margin"
+                android:text="@string/text_select_default"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/imageView_default"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
