--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -41,7 +41,7 @@
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:scaleType="centerCrop"
-                        app:background="@{viewModel.user.headerUri}"
+                        app:bannerUser="@{viewModel.user}"
                         app:layout_constraintBottom_toTopOf="@id/header_separator"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
