--- a/app/src/main/res/values-de/chat_main_menu.xml
+++ b/app/src/main/res/values-de/chat_main_menu.xml
@@ -3,6 +3,7 @@
     <string name="text_profile_title">Profil</string>
     <string name="text_security_settings_title">Sicherheitseinstellungen</string>
     <string name="text_appearance_settings_title">Darstellungseinstellungen</string>
+    <string name="text_preview_background_chat_title">Chat Hintergrund Vorschau</string>
     <string name="text_invite_someone_title">Jemanden einladen</string>
     <string name="text_help_title">Hilfe</string>
     <string name="text_subscription_title">Suscripción</string>
