--- a/app/src/main/res/values-es/image_selector.xml
+++ b/app/src/main/res/values-es/image_selector.xml
@@ -4,4 +4,5 @@
     <string name="text_change_cover_photo">Cambiar foto de portada</string>
     <string name="text_take_photo">Tomar foto</string>
     <string name="text_select_photo">Seleccionar foto</string>
+    <string name="text_select_default">Por defecto</string>
 </resources>
