--- a/app/src/main/res/values-fr/image_selector.xml
+++ b/app/src/main/res/values-fr/image_selector.xml
@@ -4,4 +4,5 @@
     <string name="text_change_cover_photo">Changer la photo de couverture</string>
     <string name="text_take_photo">Prendre photo</string>
     <string name="text_select_photo">Sélectionnez une photo</string>
+    <string name="text_select_default">Par défaut</string>
 </resources>
