--- a/app/src/main/res/values-it/chat_main_menu.xml
+++ b/app/src/main/res/values-it/chat_main_menu.xml
@@ -3,6 +3,7 @@
     <string name="text_profile_title">Profilo</string>
     <string name="text_security_settings_title">Impostazioni di sicurezza</string>
     <string name="text_appearance_settings_title">Impostazioni dell\'aspetto</string>
+    <string name="text_preview_background_chat_title">Vista previa fondo de chat</string>
     <string name="text_invite_someone_title">Invita qualcuno</string>
     <string name="text_help_title">Aiuto</string>
     <string name="text_subscription_title">Suscripción</string>
