--- a/app/src/main/res/values-it/image_selector.xml
+++ b/app/src/main/res/values-it/image_selector.xml
@@ -4,4 +4,5 @@
     <string name="text_change_cover_photo">Cambia foto di copertina</string>
     <string name="text_take_photo">Scatta una foto</string>
     <string name="text_select_photo">Seleziona la foto</string>
+    <string name="text_select_default">Per impostazione predefinita</string>
 </resources>
