--- a/app/src/main/res/values-pt/chat_main_menu.xml
+++ b/app/src/main/res/values-pt/chat_main_menu.xml
@@ -3,6 +3,7 @@
     <string name="text_profile_title">Perfil</string>
     <string name="text_security_settings_title">Configurações de segurança</string>
     <string name="text_appearance_settings_title">Configurações de aparência</string>
+    <string name="text_preview_background_chat_title">Vista previa fondo de chat</string>
     <string name="text_invite_someone_title">Convide alguém</string>
     <string name="text_help_title">Ajuda</string>
     <string name="text_subscription_title">Suscripción</string>
