--- a/app/src/main/res/values-pt/image_selector.xml
+++ b/app/src/main/res/values-pt/image_selector.xml
@@ -4,4 +4,5 @@
     <string name="text_change_cover_photo">Alterar foto da capa</string>
     <string name="text_take_photo">Tirar foto</string>
     <string name="text_select_photo">Selecionar foto</string>
+    <string name="text_select_default">Por padrão</string>
 </resources>
